--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/assets"],
+            "assets": ["src/favicon.ico"],
             "styles": ["src/styles.scss"],
             "scripts": []
           },
